# Heroes3-engine

./: AnimotionComponent.cpp  AnimotionComponent.h  BorderWindow.cpp  BorderWindow.h  Button.cpp  Button.h  ButtonsArea.cpp  ButtonsArea.h  CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  Direction.cpp  Direction.h  EditorState.cpp  EditorState.h  Game.cpp  Game.h  GameConstants.cpp  GameConstants.h  GameState.cpp  GameState.h  Graphics.cpp  Graphics.h  GuiHandler.cpp  GuiHandler.h  HeroInstance.cpp  HeroInstance.h  HeroWindow.cpp  HeroWindow.h  IntObject.cpp  IntObject.h  Kingdom.cpp  Kingdom.h  MainMenuState.cpp  MainMenuState.h  MapObject.cpp  MapObject.h  MovmentComponent.cpp  MovmentComponent.h  Pathfinder.cpp  (+19 more)
.github/workflows/: cmake.yml
BattlefieldH3/BattlefieldH3/: BattleHandler.cpp  BattleUnit.cpp  CMakeLists.txt  README.md  vcpkg.json
